--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+statuscol.nvim (1:0.0.1-40-gc461-3) unstable; urgency=medium
+
+  * statuscol-nvim => neovim-statuscol
+
+ -- Dimitry Ishenko <dimitry.ishenko@gmail.com>  Mon, 12 Jan 2026 18:45:03 -0500
+
 statuscol-nvim (1:0.0.1-40-gc461-2) unstable; urgency=medium
 
   * statuscol.lua: don't ignore oil windows
