--- a/debian/install
+++ b/debian/install
@@ -1,2 +1,2 @@
 doc lua usr/share/neovim-statuscol
-debian/statuscol.lua etc/skel/.config/nvim/plugin
+debian/50-statuscol.lua etc/skel/.config/nvim/plugin
