--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+statuscol.nvim (1:0.0.1-40-gc461-4) unstable; urgency=medium
+
+  * d/copyright: update
+  * statuscol.lua => 50-statuscol.lua
+
+ -- Dimitry Ishenko <dimitry.ishenko@gmail.com>  Fri, 30 Jan 2026 22:04:15 -0500
+
 statuscol.nvim (1:0.0.1-40-gc461-3) unstable; urgency=medium
 
   * statuscol-nvim => neovim-statuscol
